# git-stack

./: .gitignore  .markdownlint-cli2.yaml  Cargo.toml  README.md  TODO.md  commitlint.config.cjs  dist-workspace.toml  justfile  package-lock.json  package.json  stack.json
.github/workflows/: ci.yml  mirror-gitlab.yml  publish-crates.yml  release.yml
src/: cli.rs  completions.rs  config.rs  git.rs  lib.rs  lock.rs  main.rs  notes.rs  prompt.rs  providers.rs  settings.rs  setup.rs  stack.rs  style.rs  upgrade.rs
src/commands/: absorb.rs  adopt.rs  bottom.rs  children.rs  cleanup.rs  completions.rs  config.rs  credits.rs  detach.rs  down.rs  guide.rs  list.rs  merge.rs  mod.rs  new.rs  parent.rs  provider.rs  rename.rs  repair.rs  restack.rs  review.rs  run.rs  setup.rs  status.rs  submit.rs  sync.rs  top.rs  undo.rs  up.rs  upgrade.rs  view.rs
src/notes/: ledger.rs  mod.rs  sections.rs
src/providers/: demo.rs  github.rs  gitlab.rs  json.rs  mod.rs
src/stack/: mod.rs  nav.rs  restack.rs  snapshot.rs
tests/: absorb.rs  cleanup.rs  completions.rs  credits.rs  demo.rs  insert.rs  list_markdown.rs  lock.rs  merge.rs  navigation.rs  provider.rs  rename.rs  repair.rs  restack.rs  reviews.rs  run.rs  setup.rs  stack_cli.rs  submit.rs  upgrade.rs
tests/common/: mod.rs
