[package]
name = "git-stk"
version = "0.1.0"
edition = "2024"
description = "Git-native stacked branch workflow helper"
readme = "README.md"
license-file = "LICENSE"
homepage = "https://larakelley.com/git-stk"
repository = "https://github.com/lararosekelley/git-stk"
rust-version = "1.95.0"
keywords = ["git", "stacked-diffs", "cli", "github", "gitlab"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".github/**",
    ".husky/**",
    "node_modules/**",
    "target/**",
    "chat.md",
    "commitlint.config.cjs",
    "package-lock.json",
    "package.json",
]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
clap_complete = { version = "4.5.61", optional = true }
clap_mangen = { version = "0.2.29", optional = true }
serde_json = "1.0.150"

[features]
generate = ["dep:clap_complete", "dep:clap_mangen"]

[[bin]]
name = "git-stk-generate"
path = "src/bin/git-stk-generate.rs"
required-features = ["generate"]

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.23.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
