[package]
name = "git-stk"
version = "0.7.2"
edition = "2024"
description = "Git-native stacked branch workflow helper"
readme = "README.md"
license-file = "LICENSE"
homepage = "https://larakelley.com/posts/git-stk"
repository = "https://github.com/lararosekelley/git-stk"
rust-version = "1.95.0"
keywords = ["git", "stacked-diffs", "cli", "github", "gitlab"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".github/**",
    ".husky/**",
    "node_modules/**",
    "target/**",
    "chat.md",
    "commitlint.config.cjs",
    "package-lock.json",
    "package.json",
]

[dependencies]
anstream = "1.0.0"
anstyle = "1.0.14"
anyhow = "1.0.100"
axoupdater = { version = "0.10.0", default-features = false, features = ["github_releases", "blocking"] }
clap = { version = "4.5.53", features = ["derive"] }
clap_complete = { version = "4.6.5", features = ["unstable-dynamic"] }
clap_mangen = "0.2.29"
dialoguer = "0.11.0"
serde_json = "1.0.150"

[features]
# Gate for the asset-generation helper binary.
generate = []
# Development-only tooling (e.g. the version bump helper). Gated so it never
# ships in release artifacts or the published crate.
dev-tools = []

[[bin]]
name = "git-stk-generate"
path = "src/bin/git-stk-generate.rs"
required-features = ["generate"]

[[bin]]
name = "git-stk-bump"
path = "src/bin/git-stk-bump.rs"
required-features = ["dev-tools"]

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.23.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
